[package]
name = "sam4e_xplained_pro"
version = "0.1.3"
authors = ["John W. Terrell <john@coolpeoplenetworks.com>"]
edition = "2018"
description = "Board support crate for the Microchip/Atmel SAM4E_XPlained_Pro development board"
keywords = ["arm", "cortex-m", "atsam4", "atsam4e", "atsam4e16e"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsam4-rs/sam4_xplained"

[dependencies]
byteorder = { version = "1.0", default-features = false }
cortex-m = "0.7.2"
cortex-m-semihosting = "~0.3"
embedded-hal = "~0.2.4"
nb = "~0.1"
once_cell = { version = "1.7.2", default-features = false }
paste = "1.0"
smoltcp = { version = "0.7.1", default-features = false, features = ["proto-ipv4", "proto-dhcpv4", "socket-udp", "socket-tcp", "socket-icmp"]}

[dependencies.cortex-m-rt]
version = "~0.6.13"
optional = true

[dependencies.panic-abort]
version = "~0.3"
optional = true

[dependencies.panic-halt]
version = "~0.2"
optional = true

[dependencies.panic-semihosting]
version = "~0.5"
optional = true

[dependencies.atsam4-hal]
version = "0.1.12"
default-features = false
features = ["atsam4e16e", "ethernet"]

[features]
default = ["rt", "panic_semihosting"]
rt = ["cortex-m-rt"]
panic_halt = ["panic-halt"]
panic_abort = ["panic-abort"]
panic_semihosting = ["panic-semihosting"]
use_semihosting = []

[dev-dependencies.cortex-m-rtic]
version = "0.5.5"

[patch.crates-io]
atsam4-hal = { path = "../../atsam4-hal"}
smoltcp = { path = "../../smoltcp"}