[package]
name = "sam4n_xplained_pro"
version = "0.1.4"
authors = ["John W. Terrell <john@coolpeoplenetworks.com>"]
edition = "2018"
description = "Board support crate for the Microchip/Atmel SAM4N_XPlained_Pro development board"
keywords = ["arm", "cortex-m", "atsam4", "atsam4n", "atsam4n16c"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsam4-rs/sam4_xplained"

[dependencies]
aligned = { version = "0.3.4" }
arr_macro = "0.1.3"
byteorder = { version = "1.0", default-features = false }
cortex-m = "0.7.2"
cortex-m-semihosting = "~0.3"
cortex-m-systick-countdown = "0.1.0"
embedded-hal = "~0.2.4"
nb = "~0.1"
paste = "1.0"

[dependencies.cortex-m-rt]
version = "~0.6.13"
optional = true

[dependencies.panic-abort]
version = "~0.3"
optional = true

[dependencies.panic-halt]
version = "~0.2"
optional = true

[dependencies.panic-semihosting]
version = "~0.5"
optional = true

[dependencies.atsam4-hal]
version = "0.1.14"
default-features = false
features = ["atsam4n16c"]

[features]
default = ["rt", "panic_semihosting"]
rt = ["cortex-m-rt"]
panic_halt = ["panic-halt"]
panic_abort = ["panic-abort"]
panic_semihosting = ["panic-semihosting"]
use_semihosting = []

[dev-dependencies.cortex-m-rtic]
version = "0.5.5"

[patch.crates-io]
atsam4-hal = { path = "../../atsam4-hal"}
