[package]
name = "sam4s_xplained_pro"
version = "0.1.0"
authors = ["John W. Terrell <john@coolpeoplenetworks.com>"]
edition = "2018"
description = "Board support crate for the Microchip/Atmel SAM4S_XPlained_Pro development board"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4sd32c", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsam4-rs/sam4s_xplained_pro"

[dependencies]
cortex-m = "0.6.3"
embedded-hal = "~0.2.4"
nb = "~0.1"
cortex-m-semihosting = "~0.3"
paste = "1.0"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.panic-abort]
version = "~0.3"
optional = true

[dependencies.panic-halt]
version = "~0.2"
optional = true

[dependencies.panic-semihosting]
version = "~0.5"
optional = true
features = ["jlink-quirks"]

[dependencies.atsam4-hal]
version = "0.1.5"
default-features = false
features = ["atsam4sd32c"]

[features]
default = ["rt", "panic_semihosting", "atsam4-hal/disable_watchdog_timer"]
rt = ["cortex-m-rt"]
panic_halt = ["panic-halt"]
panic_abort = ["panic-abort"]
panic_semihosting = ["panic-semihosting"]
use_semihosting = []

[dev-dependencies.cortex-m-rtic]
version = "0.5.5"

# [patch.crates-io]
# atsam4-hal = { path = "../atsam4-hal" }
